--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "isparta": "*",
     "mocha": "*",
     "sinon": "*"
+  },
+  "dependencies": {
+    "cheerio": "^0.20.0",
+    "jquery": "^3.0.0",
+    "jsdom": "^9.2.1",
+    "marked": "^0.3.5",
+    "underscore": "^1.8.3"
   }
 }
