--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "compile": "babel src --out-dir lib",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run compile",
+    "lint": "eslint .",
     "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
   },
   "devDependencies": {
@@ -19,7 +20,23 @@
     "chai": "*",
     "isparta": "*",
     "mocha": "*",
-    "sinon": "*"
+    "sinon": "*",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "airbnb"
+    ],
+    "rules": {
+      "indent": [
+        2,
+        4
+      ]
+    }
   },
   "dependencies": {
     "cheerio": "^0.20.0",
