--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@et/markdown",
-  "description": "A markdown rendere for the E.Tutorial",
+  "name": "etutorial-markdown",
+  "description": "A markdown renderer for the E.Tutorial",
   "version": "0.1.0",
   "main": "lib/index.js",
   "author": "David Sichau",
