--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etutorial-markdown",
   "description": "A markdown renderer for the E.Tutorial",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "main": "lib/index.js",
   "author": "David Sichau",
   "repository": {
@@ -14,7 +14,8 @@
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run compile",
     "lint": "eslint .",
-    "test": "babel-node ./node_modules/.bin/isparta cover _mocha"
+    "test": "babel-node ./node_modules/.bin/isparta cover _mocha",
+    "posttest": "npm run lint"
   },
   "devDependencies": {
     "babel-cli": "*",
