--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etutorial-markdown",
   "description": "A markdown renderer for the E.Tutorial",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "main": "lib/index.js",
   "author": "David Sichau",
   "repository": {
@@ -37,7 +37,7 @@
     ]
   },
   "dependencies": {
-    "highlight": "^0.2.4",
+    "highlight.js": "^9.5.0",
     "markdown-it": "^7.0.0",
     "markdown-it-anchor": "^2.5.0",
     "underscore": "^1.8.3"
