--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "etutorial-markdown",
   "description": "A markdown renderer for the E.Tutorial",
-  "version": "0.4.10",
+  "version": "0.4.11",
   "main": "lib/index.js",
   "author": "David Sichau",
   "repository": {
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-cli": "*",
     "babel-preset-es2015-node4": "*",
+    "babel-preset-es2015": "*",
     "coveralls": "*",
     "chai": "*",
     "isparta": "*",
